--- a/css/index.css
+++ b/css/index.css
@@ -140,16 +140,16 @@ button:hover{
 @media (max-width: 500px) {
     .artists-container {
       width: 100%;
-      height: auto;
+     /*
       border: 1px solid black;
+      */
       flex-direction: column;
       justify-content: space-around;
       justify-content: center;
       align-items: center;
-      padding: 3% 
+      padding: 3%; 
     }
   }
 
   
-
 
